@@ -1,3 +1,6 @@
+dev:
+  * Custom deconvolution function is now called with RFStream and RFTrace
+    objects abd should return a RFStream object (see #17)
 v0.8.0:
   * remove python2 support, use previous version of rf if you need it
   * catch error from rfstats call in iter_event_data and issue a warning (see #7)
